v21.1/cockroach-userfile-upload.md
---
title: cockroach userfile upload
summary: The cockroach userfile upload command uploads a file to user-scoped file storage.
toc: true
---

 The `cockroach userfile upload` [command](cockroach-commands.html) uploads a file to the [user-scoped file storage](use-userfile-for-bulk-operations.html) using a SQL connection.

This command takes in a source file to upload and a destination filename. It will then use a SQL connection to upload the file to the [destination](#file-destination).

{{site.data.alerts.callout_info}}
A userfile uses storage space in the cluster, and is replicated with the rest of the cluster's data. We recommended using `cockroach userfile upload` for quick uploads from your client (about 15MB or smaller).
{{site.data.alerts.end}}

{{site.data.alerts.callout_success}}
If you would like to upload and import data from from a dump file, consider using [`cockroach import`](cockroach-import.html) instead.
{{site.data.alerts.end}}

## Required privileges

The user must have the `CREATE` [privilege](authorization.html#assign-privileges) on the target database. CockroachDB will proactively grant the user `GRANT`, `SELECT`, `INSERT`, `DROP`, `DELETE` on the metadata and file tables.

A user can only upload files to their own user-scoped storage, which is accessed through the [userfile URI](#file-destination). CockroachDB will revoke all access from every other user in the cluster except users in the `admin` role.

## Synopsis

Upload a file:

~~~ shell
$ cockroach userfile upload <location/of/file> <destination/of/file> [flags]
~~~

{{site.data.alerts.callout_info}}
You must specify a source path.
{{site.data.alerts.end}}

View help:

~~~ shell
$ cockroach userfile upload --help
~~~

## File destination

Userfile operations are backed by two tables: `files` (which holds file metadata) and `payload` (which holds the file payloads). To reference these tables, you can:

- Use the default URI: `userfile://defaultdb.public.userfiles_$user/`.
- Provide a fully qualified userfile URI that specifies the database, schema, and table name prefix you want to use.

    - If you do not specify a destination URI/path, then CockroachDB will use the default URI scheme and host, and the basename from the source argument as the path. For example: `userfile://defaultdb.public.userfiles_root/local`
    - If the destination is a well-formed userfile URI (i.e., `userfile://db.schema.tablename_prefix/path/to/file`), then CockroachDB will use that as the final URI. For example: `userfile://foo.bar.baz_root/destination/path`
    - If destination is not a well-formed userfile URI, then CockroachDB will use the default userfile URI schema and host (`userfile://defaultdb.public.userfiles_$user/`), and the destination as the path. For example: `userfile://defaultdb.public.userfiles_root/destination/path`



{{site.data.alerts.callout_danger}}
Userfile is **not** a filesystem and does not support filesystem semantics. The destination file path must be the same after normalization (i.e., if you pass any path that results in a different path after normalization, it will be rejected).
{{site.data.alerts.end}}

{{site.data.alerts.callout_info}}
Files are uploaded with a `.tmp` suffix and are renamed once the userfile upload transaction has committed (i.e, the process ends gracefully). Therefore, if a file you believed had finished uploading has a `.tmp` suffix, then the upload should be retried.
{{site.data.alerts.end}}

## Flags

 Flag            | Description
-----------------+-----------------------------------------------------
`--cert-principal-map` | A comma-separated list of `<cert-principal>:<db-principal>` mappings. This allows mapping the principal in a cert to a DB principal such as `node` or `root` or any SQL user. This is intended for use in situations where the certificate management system places restrictions on the `Subject.CommonName` or `SubjectAlternateName` fields in the certificate (e.g., disallowing a `CommonName` like `node` or `root`). If multiple mappings are provided for the same `<cert-principal>`, the last one specified in the list takes precedence. A principal not specified in the map is passed through as-is via the identity function. A cert is allowed to authenticate a DB principal if the DB principal name is contained in the mapped `CommonName` or DNS-type `SubjectAlternateName` fields.
`--certs-dir`    | The path to the [certificate directory](cockroach-cert.html) containing the CA and client certificates and client key.<br><br>**Env Variable:** `COCKROACH_CERTS_DIR`<br>**Default:** `${HOME}/.cockroach-certs/`
`--echo-sql`     | Reveal the SQL statements sent implicitly by the command-line utility.
`--url`          | A [connection URL](connection-parameters.html#connect-using-a-url) to use instead of the other arguments.<br><br>**Env Variable:** `COCKROACH_URL`<br>**Default:** no URL
`--user`<br>`-u` | The [SQL user](create-user.html) that will own the client session.<br><br>**Env Variable:** `COCKROACH_USER`<br>**Default:** `root`

## Examples

### Upload a file

To upload a file to the default storage (`userfile://defaultdb.public.userfiles_$user/`):

{% include copy-clipboard.html %}
~~~ shell
$ cockroach userfile upload /Users/maxroach/Desktop/test-data.csv /test-data.csv --certs-dir=certs
~~~

~~~
successfully uploaded to userfile://defaultdb.public.userfiles_root/test-data.csv
~~~

Also, a file can be uploaded to the default storage if the destination is not specified:

{% include copy-clipboard.html %}
~~~ shell
$ cockroach userfile upload /Users/maxroach/Desktop/test-data2.csv --certs-dir=certs
~~~

~~~
successfully uploaded to userfile://defaultdb.public.userfiles_root/test-data2.csv
~~~

Then, you can use the file to [`IMPORT`](import.html) or [`IMPORT INTO`](import-into.html) data.

### Upload a file to a specific directory

To upload a file to a specific destination, include the destination in the command:

{% include copy-clipboard.html %}
~~~ shell
$ cockroach userfile upload /Users/maxroach/Desktop/test-data.csv /test-upload/test-data.csv --cert-dir=certs
~~~

~~~
successfully uploaded to userfile://defaultdb.public.userfiles_root/test-upload/test-data.csv
~~~

Then, you can use the file to [`IMPORT`](import.html) or [`IMPORT INTO`](import-into.html) data.

### Upload a file to a non-default userfile URI

{% include copy-clipboard.html %}
~~~ shell
cockroach userfile upload /Users/maxroach/Desktop/test-data.csv userfile://testdb.public.uploads/test-data.csv
~~~

~~~
successfully uploaded to userfile://testdb.public.uploads/test-data.csv
~~~

### Upload a backup directory recursively

Currently in v21.1 and prior, it's [not possible to use `cockroach userfile upload` recursively](#known-limitation) when uploading a directory of files that also contains a subdirectory. When you need to upload a directory of files, such as a backup, to `userfile` storage, it is possible to programmatically upload your files.

The following example uses `userfile` storage and its features to backup a database and then restore it to the cluster. When quick testing is required, or, to protect against accidental loss of data, this workflow provides a way to recover in those scenarios when using `userfile` as your storage option.

After connecting to the cluster that contains the data you would like to backup, run the [`BACKUP`](backup.html) statement:

~~~sql
BACKUP DATABASE movr TO 'userfile://defaultdb.public.userfiles_$user/database-backup' AS OF SYSTEM TIME '-10s';
~~~

This will make a backup of the database under `database-backup` in the default `userfile` space.

~~~
job_id             |  status   | fraction_completed | rows | index_entries | bytes
-------------------+-----------+--------------------+------+---------------+---------
679645548255936513 | succeeded |                  1 | 2997 |          1060 | 492713
(1 row)
~~~

Next, on the command line, use the following [`cockroach userfile get`](cockroach-userfile-get.html) command to fetch the files stored in the `userfile` storage and download them to your local directory. (Note that without passing a specific directory this command will fetch all files stored within the default user space in `userfile`.)

~~~shell
cockroach userfile get 'userfile://defaultdb.public.userfiles_$user/database-backup' --url {CONNECTION STRING}
~~~

The output will show the files downloading:

~~~
downloaded database-backup/BACKUP-CHECKPOINT-679645548255936513-CHECKSUM to database-backup/BACKUP-CHECKPOINT-679645548255936513-CHECKSUM (4 B)
downloaded database-backup/BACKUP-CHECKPOINT-CHECKSUM to database-backup/BACKUP-CHECKPOINT-CHECKSUM (4 B)
downloaded database-backup/BACKUP-STATISTICS to database-backup/BACKUP-STATISTICS (53 KiB)
downloaded database-backup/BACKUP_MANIFEST to database-backup/BACKUP_MANIFEST (2.6 KiB)
downloaded database-backup/BACKUP_MANIFEST-CHECKSUM to database-backup/BACKUP_MANIFEST-CHECKSUM (4 B)
downloaded database-backup/data/679645557047099393.sst to database-backup/data/679645557047099393.sst (5.8 KiB)
downloaded database-backup/data/679645557048475649.sst to database-backup/data/679645557048475649.sst (1.6 KiB)
downloaded database-backup/data/679645557048868865.sst to database-backup/data/679645557048868865.sst (1.7 KiB)
downloaded database-backup/data/679645558151741442.sst to database-backup/data/679645558151741442.sst (2.0 KiB)
downloaded database-backup/data/679645558151774210.sst to database-backup/data/679645558151774210.sst (1.4 KiB)
downloaded database-backup/data/679645558151806978.sst to database-backup/data/679645558151806978.sst (1.8 KiB)
downloaded database-backup/data/679645558153281539.sst to database-backup/data/679645558153281539.sst (1.3 KiB)
downloaded database-backup/data/679645558153904131.sst to database-backup/data/679645558153904131.sst (1.1 KiB)
downloaded database-backup/data/679645558154264579.sst to database-backup/data/679645558154264579.sst (1.6 KiB)
downloaded database-backup/data/679645558404448257.sst to database-backup/data/679645558404448257.sst (5.8 KiB)
downloaded database-backup/data/679645558408249345.sst to database-backup/data/679645558408249345.sst (41 KiB)
. . .
~~~

At this point, you have backed up the database to `userfile` storage and you have a copy of that backup on your local machine.

Your backup will contain files similar to the following structure:

~~~
database-backup/
├── BACKUP-CHECKPOINT-679645548255936513-CHECKSUM
├── BACKUP-CHECKPOINT-CHECKSUM
├── BACKUP-STATISTICS
├── BACKUP_MANIFEST
├── BACKUP_MANIFEST-CHECKSUM
└── data
    ├── 679645557047099393.sst
    ├── 679645557048475649.sst
    ├── 679645557048868865.sst
    ├── 679645558151741442.sst
    ├── 679645558151774210.sst
    ├── 679645558151806978.sst
    ├── 679645558153281539.sst
    ├── 679645558153904131.sst
    ├── 679645558154264579.sst
    ├── 679645558404448257.sst
    ├── 679645558408249345.sst
. . .
~~~

If you should need to recover that data, or, apply it for testing purposes, you can now upload these files to a cluster with `cockroach userfile upload` and [`RESTORE`](restore.html).

For the purposes of this examples, [`DROP`](drop-database.html) the database:

~~~sql
DROP DATABASE movr CASCADE;
~~~

And then, use [`cockroach userfile delete`](cockroach-userfile-delete.html) to remove this from `userfile`:

~~~shell
cockroach userfile delete 'userfile://defaultdb.public.userfiles_$user/database-backup' --url 'postgresql://root@localhost:26257?sslmode=disable'
~~~

~~~
successfully deleted database-backup/BACKUP-CHECKPOINT-679645548255936513-CHECKSUM
successfully deleted database-backup/BACKUP-CHECKPOINT-CHECKSUM
successfully deleted database-backup/BACKUP-STATISTICS
successfully deleted database-backup/BACKUP_MANIFEST
successfully deleted database-backup/BACKUP_MANIFEST-CHECKSUM
successfully deleted database-backup/data/679645557047099393.sst
successfully deleted database-backup/data/679645557048475649.sst
successfully deleted database-backup/data/679645557048868865.sst
successfully deleted database-backup/data/679645558151741442.sst
successfully deleted database-backup/data/679645558151774210.sst
successfully deleted database-backup/data/679645558151806978.sst
successfully deleted database-backup/data/679645558153281539.sst
successfully deleted database-backup/data/679645558153904131.sst
successfully deleted database-backup/data/679645558154264579.sst
~~~

Currently, `cockroach userfile upload` will not recursively upload files from a directory. See this [known limitation](../{{site.versions["stable"]}}/cockroach-userfile-upload.html#known-limitation).

#### NOTE Which do your prefer below?


It is possible to programmatically upload your files from the command line. For example, the loop in the below Bash script will upload each of the files to `database-backup` in the `userfile` space from the `~/database-backup` directory on your local machine.

~~~shell
for x in database-backup/* database-backup/*/*; do cockroach userfile upload $x $x --url="YOUR_CONNECTION STRING"; done
~~~

~~~
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/BACKUP-CHECKPOINT-679645548255936513-CHECKSUM
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/BACKUP-CHECKPOINT-CHECKSUM
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/BACKUP-STATISTICS
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/BACKUP_MANIFEST
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/BACKUP_MANIFEST-CHECKSUM
E210728 14:36:13.465248 1 1@cli/error.go:399  [-] 1  source file database-backup/data is a directory, not a file
ERROR: source file database-backup/data is a directory, not a file
Failed running "userfile upload"
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/data/679645557047099393.sst
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/data/679645557048475649.sst
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/data/679645557048868865.sst
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/data/679645558151741442.sst
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/data/679645558151774210.sst
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/data/679645558151806978.sst
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/data/679645558153281539.sst
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/data/679645558153904131.sst
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/data/679645558154264579.sst
~~~

<!--TODO -->
#### alternative:

It is possible to programmatically upload your files from the command line. For example, the following command finds all files under `database-backup` and pipes them through to [`xargs`](https://linux.die.net/man/1/xargs), which will execute `cockroach userfile upload` for each file. Every occurrence of `{}` in the command, is replaced with the filename.

~~~shell
find database-backup -type f | xargs -I{} cockroach userfile upload {} {} --url='postgresql://root@localhost:26257?sslmode=disable'
~~~

~~~
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/BACKUP_MANIFEST-CHECKSUM
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/BACKUP-CHECKPOINT-CHECKSUM
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/BACKUP-STATISTICS
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/BACKUP-CHECKPOINT-679678586269007873-CHECKSUM
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/BACKUP_MANIFEST
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/data/679678597597560835.sst
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/data/679678594426601474.sst
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/data/679678592925335554.sst
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/data/679678594438758403.sst
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/data/679678597585862658.sst
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/data/679678596261609475.sst
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/data/679678592971046913.sst
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/data/679678597584846850.sst
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/data/679678594429222913.sst
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/data/679678596269113346.sst
successfully uploaded to userfile://defaultdb.public.userfiles_root/database-backup/data/679678592927498243.sst
. . .
~~~
 -->

Now, with the backup files present in `userfile` storage, you can `RESTORE` the database to the cluster:

~~~sql
RESTORE DATABASE movr FROM 'userfile:///database-backup';
~~~

Note that `userfile:///` refers to the default path `userfile://defaultdb.public.userfiles_$user/`.

## Known limitation

{% include {{ page.version.version }}/known-limitations/userfile-upload-non-recursive.md %}

## See also

- [`cockroach userfile list`](cockroach-userfile-list.html)
- [`cockroach userfile delete`](cockroach-userfile-delete.html)
- [`cockroach userfile get`](cockroach-userfile-get.html)
- [Use `userfile` for Bulk Operations](use-userfile-for-bulk-operations.html)
- [Other Cockroach Commands](cockroach-commands.html)
- [`IMPORT`](import.html)
- [`IMPORT INTO`](import-into.html)
